network refactoring continued. Refactor directory structure. Working Websockets test